[project]
name = "claude-usage-analysis"
version = "0.1.0"
description = "Analyze Claude Code conversation histories and quantify usage KPIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
claude-usage = "claude_usage_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage_analysis"]
